--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,29 @@
     <link rel="shortcut icon" href="image/f-logo.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <title>FAYSAL</title>
 </head>
+
 <body>
-    <h1 class="head">Welcome To</h1>
-    <h1 class="head">D.H. Faysal's Universe!</h1>
+    <section class="top-banner">
+        <div class="main-page">
+            <h1>Welcome To</h1>
+            <h1><span id="head-color">D.H. Faysal's</span> Universe!</h1>
+            <h3>Front-end Developer</h3>
+            <p>Responsive websites built for an optimal user experience that achieves
+                your
+                business goals. Helping start-ups,smaill businesses and agencies achieve high quality websites ans
+                exceptional
+                user experience.</p>
+            <br>
+            <a id="link-button" href="https://www.facebook.com/fosuuu.ein/" target="_">HIRE ME</a>
+        </div>
+        <div class="main-page">
+            <img src="image/my-bg3.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
