secound page updated

--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
             <img src="image/my-bg3.png" alt="">
         </div>
     </section>
+    <section class="dream-banner">
+        <div class="sec-page">
+            <img src="image/faysal-bg.png" alt="">
+        </div>
+        <div class="sec-page2">
+            <h1>Dream Big</h1>
+            <h3>Become a Full Stack Web Developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. My goal is learn advanced topics to build any type of professonal websites.</p> <br>
+            <a id="link-button" href="https://github.com/faysal26" target="_">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
 
 </html>
