--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="top-banner">
         <div class="main-page">
             <h1>Welcome To</h1>
-            <h1><span id="head-color">D.H. Faysal's</span> Universe!</h1>
+            <h1><span id="head-color">D.H. Faysal's</span>Multiverse!</h1>
             <h3>Front-end Developer</h3>
             <p>Responsive websites built for an optimal user experience that achieves
                 your
