--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             <a id="link-button" href="https://www.facebook.com/fosuuu.ein/" target="_">HIRE ME</a>
         </div>
         <div class="main-page">
-            <img src="image/my-bg3.png" alt="">
+            <img src="image/my-bg2.png" alt="">
         </div>
     </section>
     <section class="dream-banner">
         <div class="sec-page">
-            <img src="image/faysal-bg.png" alt="">
+            <img src="image/my-bg.png" alt="">
         </div>
         <div class="sec-page2">
             <h1>Dream Big</h1>
