--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="image/f-logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -28,12 +28,12 @@
             <a id="link-button" href="https://www.facebook.com/fosuuu.ein/" target="_">HIRE ME</a>
         </div>
         <div class="main-page">
-            <img src="image/my-bg2.png" alt="">
+            <img src="image/my-bg3.png" alt="">
         </div>
     </section>
     <section class="dream-banner">
         <div class="sec-page">
-            <img src="image/my-bg.png" alt="">
+            <img src="image/faysal-bg.png" alt="">
         </div>
         <div class="sec-page2">
             <h1>Dream Big</h1>
