--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner main-container">
         <div class="main-page">
             <h1>Welcome To</h1>
             <h1><span id="head-color">D.H. Faysal's</span>&nbsp; Multiverse!</h1>
@@ -31,15 +31,30 @@
             <img src="image/my-bg3.png" alt="">
         </div>
     </section>
-    <section class="dream-banner">
+    <section class="dream-banner main-container">
         <div class="sec-page">
             <img src="image/faysal-bg.png" alt="">
         </div>
-        <div class="sec-page2">
+        <div class="sec-page2 ">
             <h1>Dream Big</h1>
             <h3>Become a Full Stack Web Developer</h3>
             <p>I already learned the basic HTML and CSS. I can build any simple website. My goal is learn advanced topics to build any type of professonal websites.</p> <br>
             <a id="link-button" href="https://github.com/faysal26" target="_">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+    <section class="last-banner">
+        <h1>Experiences</h1>
+        <div class="main-container">
+            <div class="exprience-container">
+                <h2>Full Stack Web Developer</h2>
+                <h4>2021-Present | Pro Level Developer</h4>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="exprience-container">
+                <h2>Front-end Web Developer</h2>
+                <h4>2021 | Programming Hero Learner</h4>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
         </div>
     </section>
 </body>
