--- a/index.html
+++ b/index.html
@@ -42,21 +42,23 @@
             <a id="link-button" href="https://github.com/faysal26" target="_">DOWNLOAD RESUME</a>
         </div>
     </section>
-    <section class="last-banner">
-        <h1>Experiences</h1>
-        <div class="main-container">
-            <div class="exprience-container">
-                <h2>Full Stack Web Developer</h2>
-                <h4>2021-Present | Pro Level Developer</h4>
-                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+
+    <section class="exp-banner">
+            <h1>Experiences</h1>
+            <div class="main-container">
+                <div class="exprience-container exprience-container-border1">
+                    <h2>Full Stack Web Developer</h2>
+                    <h4 class="exprience-container-color">2021-Present | Pro Level Developer</h4>
+                    <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+                </div>
+                <div class="exprience-container exprience-container-border2">
+                    <h2>Front-end Web Developer</h2>
+                    <h4 class="exprience-container-color">2021 | Programming Hero Learner</h4>
+                    <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+                </div>
             </div>
-            <div class="exprience-container">
-                <h2>Front-end Web Developer</h2>
-                <h4>2021 | Programming Hero Learner</h4>
-                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
-            </div>
-        </div>
-    </section>
+        </section>
+    
 </body>
 
 </html>
